# app/models/commit.rb
@@ -3,4 +3,7 @@ class Commit < ApplicationRecord
   has_one :host, through: :repository
 
   validates :sha, presence: true, uniqueness: { scope: :repository_id }
+
+  scope :since, ->(date) { where('timestamp > ?', date) }
+  scope :until, ->(date) { where('timestamp < ?', date) }
 end
